--- a/table2.html
+++ b/table2.html
@@ -35,6 +35,18 @@
     <td>11111</td>
     <td>11111</td>
   </tr>
+  <br>
+  <input type="text">
+  <input type="checkbox">
+  <input type="radio">
+  <textarea name="" id="" cols="30" rows="10"></textarea>
+  <button style="width: 30px ;background: yellow">a</button>
+  <br>
+  <select name="" id="">
+    <optio>wdWDwe</optio>
+    <optio>br</optio>
+    <optio>br</optio>
+  </select>
 </table>
 </body>
 </html>
